# homekit

examples/lvglhomekit/: CMakeLists.txt
examples/lvglhomekit/components/lv_port_fs/: CMakeLists.txt  component.mk  lv_init.cpp  lv_port_fatfs.c  lv_sd_fatfs.cpp
examples/lvglhomekit/components/lv_port_fs/include/: lv_init.h  lv_port_fatfs.h  lv_sd_fatfs.h
examples/lvglhomekit/components/lvgl/: lv_conf.h
examples/lvglhomekit/components/mpu6050/: CMakeLists.txt  component.mk  inv_mpu.c  inv_mpu.cpp  inv_mpu_dmp_motion_driver.cpp  mpu6050.c  mpu6050.cpp  mpu6050_i2c.c  mpu6050_main.c
examples/lvglhomekit/main/: CMakeLists.txt  app_main.cpp
examples/lvglhomekit/main/app/homekit/: homekit_app.cpp  homekit_gpio.c  homekit_rgb.c  homekit_wifi.c
examples/lvglhomekit/main/app/homekit/include/: homekit_demo.h  homekit_gpio.h  homekit_rgb.h
examples/lvglhomekit/main/homekit/: homekit_demo.c  homekit_gpio.c
examples/lvglhomekit/main/homekit/include/: homekit_app.h  homekit_wifi.h
examples/lvglhomekit/main/src/: app_contorller.cpp  app_contorller_gui.c  app_mpu6050.cpp  app_timer.cpp
examples/lvglhomekit/main/src/include/: app_contorller.h  app_interface.h  app_mpu6050.h  app_timer.h
examples/lvglhomekit/main/srcshdas/: HoloCubic_AIO.cpp  common.h  network.cpp
examples/lvglhomekit/main/srcshdas/app/file_manager/: file_manager.cpp
examples/lvglhomekit/main/srcshdas/app/screen_share/: screen_share.cpp
examples/lvglhomekit/main/srcshdas/app/weather/: lv_font_ibmplex_64.c  weather_gui.c
examples/lvglhomekit/main/srcshdas/sys/: app_contorller.h
(+7 files in other folders)
